--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -6,4 +6,5 @@
 
 <script>
   $(document).ready(new_member_functions());
+  $(document).ready(function(){ $('#states_div').attr('data-remote', 'true'); })
 </script>
