--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -60,18 +60,20 @@
         </tr>
         <tr class = "control-group">
           <th>
-            <%= f.label :state, t('activerecord.attributes.member.state'), :class => 'help-inline required' %>
+            <%= f.label :country, t('activerecord.attributes.member.state'), :class => 'help-inline required' %>
           </th>
           <td> 
-            <%= f.text_field :state, :class => 'text_field' %> 
+            <%= f.select(:country, Member.supported_countries.map { |cc| [Member.country_name(cc), cc]}, :prompt => t('buttons.select_country')) %>
           </td>  
         </tr>
         <tr class = "control-group">
           <th>
-            <%= f.label :country, t('activerecord.attributes.member.country'), :class => 'help-inline required' %>
+            <%= f.label :state, t('activerecord.attributes.member.country'), :class => 'help-inline required' %>
           </th>
           <td> 
-            <%= f.country_code_select(:country, [['', '']] + Member.supported_countries.map { |cc| [Member.country_name(cc), cc]}) %> 
+            <div id="states_div">
+              <%= render :partial => 'states', :locals => {:f => f, :state => (@current_member.state if @current_member)}  %>
+            </div>
           </td>  
         </tr>
       </table>
@@ -271,6 +273,4 @@ Please, have in mind that fields with ' * ' are required.
   <%= f.hidden_field :enrollment_amount, :value => 0.0 %>
   <%= f.hidden_field :product_sku, :value => "KIT,CARD" %>
 <% end %>
-
-
 
