--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -99,8 +99,11 @@
                   </tr>
                   <tr>
                     <td><%= t('activerecord.attributes.member.state') %></td>
-                    <td><%= text_field :member, :state, :class => 'test_field',
-                                     :value => (params[:member][:state] if params[:member]) %>
+                    <td>
+                      <%= select_tag( 'member[state]' , options_from_collection_for_select(
+                        @countries, "name", "name", 
+                        params[:selected_state]),
+                        :include_blank => true) %>
                     </td>
                   </tr>
                   <tr>
