--- a/app/views/credit_cards/_form.html.erb
+++ b/app/views/credit_cards/_form.html.erb
@@ -1,7 +1,7 @@
 <table class="table table-bordered" >
   <tr>
     <td> 
-      <%= f.label :encrypted_number, t('activerecord.attributes.credit_card.encrypted_number'), :class => 'help-inline' %> 
+      <%= f.label :number, t('activerecord.credit_card')+' '+t('activerecord.attributes.credit_card.number'), :class => 'help-inline' %> 
       <%= f.text_field :number, :class => 'text_field input-medium'%> 
     <td> 
       <%= f.label :expire_month, t('activerecord.attributes.credit_card.expire_month'), :class => 'help-inline' 
