ref#23842-Added hidden field with KIT and CARD products sku on member's form, so as to add those products when enrolling (only from CS)

--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -267,6 +267,7 @@
 
 <% if @member.new_record? %>
   <%= f.hidden_field :enrollment_amount, :value => 0.0 %>
+  <%= f.hidden_field :product_sku, :value => "KIT,CARD" %>
 <% end %>
 
 
