--- a/app/views/members/_states.erb
+++ b/app/views/members/_states.erb
@@ -1,11 +1,10 @@
 <%= 
-	unless params[:country_code].nil?
-		select_tag( 'member[state]' , options_from_collection_for_select(
+	unless params[:country_code].blank?
+		select_tag( 'member[state]' , options_for_select([t('buttons.select_state'),''])+options_from_collection_for_select(
 	        Carmen::Country.coded(params[:country_code]).subregions,
 	        "name", "name", 
-	        params[:selected_state]),
-	        :include_blank => true) 
+	        params[:selected_state])) 
 	else
-		select_tag 'member[state]' , options_for_select(['',''])
+		select_tag 'member[state]' , options_for_select([t('buttons.select_state'),''])
 	end
 %>
