--- a/app/views/members/edit.js.erb
+++ b/app/views/members/edit.js.erb
@@ -1,2 +1,2 @@
-$('#states_div').html('<%=escape_javascript(render(:partial => "states" ))%>');
-$('#states_div').attr('data-remote', 'true');
+$('#states_td').html('<%=escape_javascript(render(:partial => "states" ))%>');
+$('#states_td').attr('data-remote', 'true');
