--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -63,17 +63,15 @@
             <%= f.label :country, t('activerecord.attributes.member.country'), :class => 'help-inline' %>
           </th>
           <td> 
-            <%= f.select(:country, [[t('buttons.select_country'), '']] + Member.supported_countries.map { |cc| [Member.country_name(cc), cc]}) %> 
+            <%= f.select(:country, Member.supported_countries.map { |cc| [Member.country_name(cc), cc]}, :prompt => t('buttons.select_country')) %> 
           </td>  
         </tr>
         <tr class = "control-group">
           <th>
             <%= f.label :state, t('activerecord.attributes.member.state'), :class => 'help-inline' %>
           </th>
-          <td> 
-            <div id="states_div">
-              <%= render :partial => 'states', :locals => {:f => f, :state => (@current_member.state if @current_member)}  %>
-            </div>
+          <td id="states_td"> 
+            <%= render :partial => 'states', :locals => {:f => f, :state => (@current_member.state if @current_member)}  %>
           </td>  
         </tr>
       </table>
