changed text of button 'return to member show' to 'Cancel'

--- a/app/views/member_notes/new.html.erb
+++ b/app/views/member_notes/new.html.erb
@@ -13,7 +13,7 @@
     </tr>
     <tr> 
       <td> <%= submit_tag t('buttons.save_member_note'), :class => 'btn btn-primary' %>
-           <%= link_to t('buttons.return_to_member_show'), :back, :class => 'btn' %> 
+           <%= link_to t('buttons.cancel'), :back, :class => 'btn' %> 
       </td> 
     </tr>
   </table>
