--- a/app/views/members/add_club_cash.html.erb
+++ b/app/views/members/add_club_cash.html.erb
@@ -20,7 +20,7 @@
     </tr>
     <tr>
     	<td> <%= submit_tag t('buttons.add_club_cash_transaction'), :class => 'btn btn-primary' %> 
-    	     <%= link_to t('buttons.return_to_member_show'), show_member_path, :class => 'btn' %> </td>
+    	     <%= link_to t('buttons.cancel'), show_member_path, :class => 'btn' %> </td>
     </tr>
   </table>
 <% end %>
