--- a/app/views/members/change_next_bill_date.html.erb
+++ b/app/views/members/change_next_bill_date.html.erb
@@ -10,7 +10,7 @@
     </tr>
     <tr>
       <td> <%= submit_tag t('buttons.change_bill_date'), :class => 'btn btn-primary' %>
-           <%= link_to t('buttons.return_to_member_show'), show_member_path, :class => 'btn' %> </td>
+           <%= link_to t('buttons.cancel'), show_member_path, :class => 'btn' %> </td>
     </tr>
   </table>
 <% end%>
