--- a/app/views/members/set_undeliverable.html.erb
+++ b/app/views/members/set_undeliverable.html.erb
@@ -8,4 +8,4 @@
   	</tr>
   </thead>
 </table>
-<%= link_to t('buttons.return_to_member_show'), show_member_path, :class => 'btn' %> 
+<%= link_to t('buttons.cancel'), show_member_path, :class => 'btn' %> 
