--- a/app/views/operations/show.html.erb
+++ b/app/views/operations/show.html.erb
@@ -14,7 +14,7 @@
 	  </tr>
 	  <tr>
 	    <td colspan="2"> <%= f.submit t('buttons.save_operation_note'), :class => 'btn btn-primary' %>
-	         <%= link_to t('buttons.return_to_member_show'), show_member_path, :class => 'btn' %> </td>
+	         <%= link_to t('buttons.cancel'), show_member_path, :class => 'btn' %> </td>
 	  </tr>
 	</tr> 
 </table>
