--- a/app/views/members/save_the_sale.html.erb
+++ b/app/views/members/save_the_sale.html.erb
@@ -15,7 +15,7 @@
     </tr>
     <tr>
       <td> <%= submit_tag t('buttons.save_te_sale'), :class => 'btn btn-primary', :confirm => t('are_you_sure') %>
-           <%= link_to t('buttons.return_to_member_show'), show_member_path, :class => 'btn' %> </td>
+           <%= link_to t('buttons.cancel'), show_member_path, :class => 'btn' %> </td>
     </tr>
   </table>
 <% end%>
