--- a/app/views/members/set_unreachable.html.erb
+++ b/app/views/members/set_unreachable.html.erb
@@ -13,7 +13,7 @@
     <th> 
       <%= submit_tag t('buttons.set_wrong_phone_number'), :class => 'btn btn-primary', 
                                :confirm => t('are_you_sure') %>
-      <%= link_to t('buttons.return_to_member_show'), show_member_path, :class => 'btn' %> 
+      <%= link_to t('buttons.cancel'), show_member_path, :class => 'btn' %> 
     </th>
     </tr>
     </thead>
