--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -60,7 +60,7 @@
         </tr>
         <tr class = "control-group">
           <th>
-            <%= f.label :country, t('activerecord.attributes.member.state'), :class => 'help-inline required' %>
+            <%= f.label :country, t('activerecord.attributes.member.country'), :class => 'help-inline required' %>
           </th>
           <td> 
             <%= f.select(:country, Member.supported_countries.map { |cc| [Member.country_name(cc), cc]}, :prompt => t('buttons.select_country')) %>
@@ -68,7 +68,7 @@
         </tr>
         <tr class = "control-group">
           <th>
-            <%= f.label :state, t('activerecord.attributes.member.country'), :class => 'help-inline required' %>
+            <%= f.label :state, t('activerecord.attributes.member.state'), :class => 'help-inline required' %>
           </th>
           <td id="states_td"> 
             <%= render :partial => 'states', :locals => {:f => f, :state => (@current_member.state if @current_member)}  %>
