--- a/app/views/members/index.js.erb
+++ b/app/views/members/index.js.erb
@@ -1,2 +1,5 @@
 $('#members').html('<%=escape_javascript(render(:partial => "search"))%>');
 $('.pagination a').attr('data-remote', 'true');
+
+$('#states_td').html('<%=escape_javascript(render(:partial => "states" ))%>');
+$('#states_td').attr('data-remote', 'true');
