--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -261,7 +261,7 @@
           <tr class="ligthgrey">
             <th><%= t('activerecord.attributes.member.club_cash_amount') %>:</th>
             <td id="td_mi_club_cash_amount">
-              <%= @current_member.club_cash_amount.to_f %>&nbsp;&nbsp;&nbsp;
+              <%= @current_member.club_cash_amount %>&nbsp;&nbsp;&nbsp;
               <% unless disable_save_sale %>
                 <%= link_to(member_add_club_cash_path, :class => "btn btn-success", :id => "link_member_add_club_cash", :disabled => (cannot? :add_club_cash, Member)) do %> 
                   <i class="icon-plus"></i> <%= t('activerecord.attributes.member.add_club_cash_transaction') %>
