visual improvements at member show

--- a/app/views/members/_pardot_sync.html.erb
+++ b/app/views/members/_pardot_sync.html.erb
@@ -22,7 +22,7 @@
       <td><%= 
           link_to member_pardot_sync_path, 
             method: :post, 
-            class: 'btn btn-warning', 
+            class: 'btn btn-mini btn-warning', 
             id: "sync_to_remote",
             confirm: 'Are you sure?' do %>
           <i class='icon-retweet'></i>
