ref#22510-Fixed club cash form css.

--- a/app/views/members/add_club_cash.html.erb
+++ b/app/views/members/add_club_cash.html.erb
@@ -28,7 +28,7 @@
       </td>
     </tr>
     <tr>
-    	<td> <%= submit_tag t('buttons.add_club_cash_transaction'), :class => 'btn btn-primary' %> 
+    	<td> <%= submit_tag t('buttons.add_club_cash_transaction'), :class => 'btn btn-primary', :id => "submit_button" %> 
     	     <%= link_to t('buttons.cancel'), show_member_path, :class => 'btn' %> </td>
     </tr>
   </table>
