ref#24054-added errors to members answers. Also added validation on member's recovery button to let blacklisted member to be recover.

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -72,7 +72,7 @@
 
     <div class="row-fluid" style="margin-top: 8px;">
       <div class="span4">
-        <% if @current_member.lapsed? %>
+        <% if @current_member.lapsed? and not @current_member.blacklisted %>
           <%= link_to "Recover", member_recover_path, :class => "btn btn-success btn-large-w" %>
         <% else %>
           <%= link_to "Recover", "#", :class => "btn btn-large-w", :disabled => true %>
