ref#23945-added text to notice that member has no preferences set. Also updated integration test.

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -289,18 +289,22 @@
   </tbody>
 </table>
 
-<% unless @current_member.preferences.nil? %>
+
   <table id="table_enrollment_info" class="table table-bordered table-condensed table-nohover">
     <thead>
       <tr class="box_title"><th><h4>Preferences</h4></th></tr>
     </thead>
     <tbody>
-      <% @current_member.preferences.each do |key, value| %>
-        <tr><td> <%= key %>: <%= value %> </td></tr>
+      <% unless @current_member.preferences.nil? %>
+        <% @current_member.preferences.each do |key, value| %>
+          <tr><td> <%= key %>: <%= value %> </td></tr>
+        <% end %>
+      <% else %>
+        <tr><td> <%= t('activerecord.attributes.member.has_no_preferences_saved') %> </td></tr>
       <% end %>
     </tbody>
   </table>
-<% end %>
+
 
 <ul class="nav nav-tabs">
   <li class="active"><a href="#operations" data-toggle="tab">Operations</a></li>
