ref#23909-fixed text.

--- a/app/views/members/add_club_cash.html.erb
+++ b/app/views/members/add_club_cash.html.erb
@@ -17,8 +17,7 @@
             :value => (params[:club_cash_transaction][:amount] if params[:club_cash_transaction]) %>
       	</div>      
         </br></br></br>
-        <%= label :amount, t('activerecord.attributes.club_cash_transaction.amount_help'), 
-                  :class => 'help-inline', :style=>"float:left" %>
+        <%= t('activerecord.attributes.club_cash_transaction.amount_help') %>
       </td>      
     </tr>
     <tr> 
