--- a/app/views/members/add_club_cash.html.erb
+++ b/app/views/members/add_club_cash.html.erb
@@ -17,7 +17,7 @@
             :value => (params[:club_cash_transaction][:amount] if params[:club_cash_transaction]) %>
       	</div>      
         </br></br></br>
-        <%= t('activerecord.attributes.club_cash_transaction.amount_help') %>
+        <p style="float:left" class="help-inline"> <%= t('activerecord.attributes.club_cash_transaction.amount_help') %> </p>
       </td>      
     </tr>
     <tr> 
