--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -277,11 +277,11 @@
           </tr>
           <tr>
             <th><%= t('activerecord.attributes.member.date_of_active_credit_card') %>: </th>
-            <td id="td_mi_credit_cards_first_created_at"><%= @current_member.credit_cards.first && I18n.l(@current_member.active_credit_card.created_at, :format => :only_date) %> </td>
+            <td id="td_mi_credit_cards_first_created_at"><%= @active_credit_card && I18n.l(@active_credit_card.created_at, :format => :only_date) %> </td>
           </tr>
           <tr>
             <th><%= t('activerecord.attributes.member.last_successful_bill_date') %>: </th>
-            <td><%= I18n.l(@current_member.active_credit_card.last_successful_bill_date, :format => :only_date) if @current_member.active_credit_card.try(:last_successful_bill_date) %> </td>
+            <td><%= I18n.l(@active_credit_card.last_successful_bill_date, :format => :only_date) if @active_credit_card.try(:last_successful_bill_date) %> </td>
           </tr>
         </table>        
       </td>
