ref#22671-Added option to download xls on fulfillments report.

--- a/app/views/fulfillments/_report_result.html.erb
+++ b/app/views/fulfillments/_report_result.html.erb
@@ -1,10 +1,15 @@
 <% if @fulfillments %>
   
   <% if @status == 'processing' %>
-    <%= form_tag(generate_csv_fulfillments_path) do %>
+    <%= form_tag(generate_csv_fulfillments_path, :style => "float:left") do %>
       <%= hidden_field :status, nil, :value => 'processing' %>
       <%= hidden_field :product_type, nil, :value => "#{params[:product_type]}" %>
       <%= submit_tag t('buttons.generate_csv'), :class => 'btn btn-primary' %> 
+    <% end %>
+    <%= form_tag(generate_xls_fulfillments_path) do %>
+      <%= hidden_field :status, nil, :value => 'processing' %>
+      <%= hidden_field :product_type, nil, :value => "#{params[:product_type]}" %>
+      <%= submit_tag t('buttons.generate_xls'), :class => 'btn btn-primary' %>
     <% end %>
   <% end %>
 
