--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -343,6 +343,11 @@
       <%= render :partial => 'fulfillments', :locals => { :fulfillments => @fulfillments} %>
     </div>
   </div>  
+  <div class="tab-pane" id="communication">
+    <div class="tab_body_padding">
+      <%= render :partial => 'communications', :locals => { :communications => @communications} %>
+    </div>
+  </div>
   <% if @current_member.api_member and can? :see_sync_status, Member %>
     <div class="tab-pane" id="sync_status">
       <div class="tab_body_padding">
