--- a/app/views/members/_states.erb
+++ b/app/views/members/_states.erb
@@ -1,7 +1,7 @@
 <%= 
 	unless params[:country_code].blank?
 		select_tag( 'member[state]' ,options_from_collection_for_select(
-	        Carmen::Country.coded(params[:country_code]).subregions,
+	        Member.supported_states(params[:country_code]),
 	        "code", "name", 
 	        params[:selected_state]),
 					:prompt => t('buttons.select_state'))
