ref#23927-Fixed xyntax

--- a/app/views/notifier/members_with_duplicated_email_sync_error.erb
+++ b/app/views/notifier/members_with_duplicated_email_sync_error.erb
@@ -19,7 +19,7 @@
 </table>
 
 	<p> Here are a few stepts to fix this problem. </p>
-	<p> Step 1] Log in on drupal with user and password admin. url: http://dev.phoenix.stoneacreinc.com/user </p>
+	<p> Step 1] Log in on drupal with admin user and password. url: http://dev.phoenix.stoneacreinc.com/user </p>
 	<p> Step 2] Go to url http://dev.phoenix.stoneacreinc.com/admin/people, filter the list by member's email, and click on "edit". </p>
 	<p> Step 3] You can see the member's drupal id on the page's url (eg. http://dev.phoenix.stoneacreinc.com/user/XXX/edit where XXX is drupal id) </p>
 	<p> Step 4] Go to member's profile page on CS. On the bottom of the page, go to "Sync Status" tab. Click on "Edit" and enter the drupal id we obtain from step 3. After this click on "Update".</p>
