--- a/app/views/credit_cards/new.html.erb
+++ b/app/views/credit_cards/new.html.erb
@@ -1,5 +1,5 @@
 <%= render :partial => "shared/member_information" %>
 
-<%= form_for @credit_card, :as => :credit_card, :url => credit_cards_path, do |f| %>
+<%= form_for @credit_card, :as => :credit_card, :url => credit_cards_path do |f| %>
   <%= render :partial => 'form', :locals => { :f => f } %>
 <% end%>
