--- a/app/views/members/_communications.html.erb
+++ b/app/views/members/_communications.html.erb
@@ -26,7 +26,17 @@
               <h3> <%= t('activerecord.attributes.communication.response') %> </h3>
             </div>
             <div class="modal-body"> <%= communication.response %> </div>
-            <div class="modal-footer"> <a href="#" class="btn" data-dismiss="modal" >Close</a> </div>
+            <div class="modal-footer"> <a href="#" class="btn" data-dismiss="modal">Close</a> </div>
+          </div>
+        <% else %>
+          <i class ="icon-remove help" rel= "popover" data-toggle="modal" href="#myModal<%=communication.id%>" style="cursor: pointer"></i>
+          <div id="myModal<%=communication.id%>" class="well modal hide" style="border: none;">
+            <div class="modal_header">
+              <a href="#" class="close">&times;</a>
+              <h3> <%= t('activerecord.attributes.communication.response') %> </h3>
+            </div>
+            <div class="modal-body"> <%= communication.response %> </div>
+            <div class="modal-footer"> <a href="#" class="btn" data-dismiss="modal">Close</a> </div>
           </div>
         <% end %>
   	  </td>
