--- a/app/views/notifier/members_with_duplicated_email_sync_error.erb
+++ b/app/views/notifier/members_with_duplicated_email_sync_error.erb
@@ -24,7 +24,7 @@
 	<% end %>
 </table>
 
-	<p> Here are a few stepts to fix this problem. </p>
+    <p> Here are a few stepts to fix this problem. NOTE: <strong>http://dev.phoenix.stoneacreinc.com/</strong> is an URL use by example. The correct URL is located under the column "Drupal domain link" for each member.</p>
 	<p> Step 1] Log in on drupal's domain with admin user and password. </p>
 	<p> Step 2] Go to url http://dev.phoenix.stoneacreinc.com/admin/people, filter the list by member's email, and click on "edit". </p>
 	<p> Step 3] You can see the member's drupal id on the page's url (eg. http://dev.phoenix.stoneacreinc.com/user/XXX/edit where XXX is drupal id) </p>
